# s4d

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  standalone.py
examples/: s4bert.py  s4dbert.py  sashimi.py
s4d/: __init__.py  model.py
s4d/_src/: core.py  modules.py
src/s4d/: __init__.py  model.py
