[metadata]
name = s4d
version = 0.2.0
license = MIT
description = Structured state space models for dm-haiku
long_description = file: README.md
author = kavorite

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   jax~=0.3
   dm-haiku>=0.0.6
   einops~=0.4

[options.packages.find]
where=src